--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,7 @@
 /* Page Specific CSS */
 
 body {
-	font-family: "Comic Sans MS", Arial, sans-serif; 
+	font-family: "Open Sans", Arial, sans-serif; 
 	background: #343434; 
 	color: whitesmoke; 
 	font-size: 12px; 
@@ -50,7 +50,7 @@ a.button {
 
 /*Popup style for features in map*/
 .leaflet-popup-content {
-	font-family: "Comic Sans MS", Arial, sans-serif;
+	font-family: "Open Sans", Arial, sans-serif;
 	color: whitesmoke;
 }
 .leaflet-popup-content, .leaflet-popup-content-wrapper, .leaflet-popup-tip {
@@ -68,7 +68,6 @@ a.button {
 
 /*Info pane style*/
 #infoPane {
-	height: 400px; 
 	max-width: 350px; 
 	width: 100%; 
 	float: right; 
@@ -92,6 +91,19 @@ img.establishmentIcon {
 	width: 80px;
 }
 
+#legend {
+	max-width: 530px; 
+}
+#legend>.container {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+#legend>.container>ul {
+	display: inline-block;
+	list-style-type: none;
+}
+
 /*Info at bottom of page*/
 #info p {
 	font-size: 14px; 
@@ -111,7 +123,7 @@ img.establishmentIcon {
 	padding-bottom: 20px;
 }
 #beerTable table {
-	min-width: 900px;
+	min-width: 400px;
 }
 #beerTable .tHeader:hover {
 	color: #1DE9B6;
@@ -148,7 +160,7 @@ img.establishmentIcon {
   	max-width: 460px; 
   	padding-top: 20px;
   }*/
-  #beerTable, #map {
+  #beerTable, #map, #legend {
   	min-width: 224px;
   }
 }
